# sh-manifold

./: README.md
shalev/: CMakeLists.txt  exportToSTL.cpp  main.cpp
